--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- <link rel="manifest" href="manifest.json"> -->
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <script src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
-  <!-- <script>
+  <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
+  <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('service-worker.js').then(function(registration) {
       // console.log('ServiceWorker registration successful with scope: ', registration.scope);
@@ -17,10 +17,16 @@
       console.log('ServiceWorker registration failed: ', err);
     });
   }
-  </script> -->
+  </script>
 </head>
 <body>
-  <canvas id="game"></canvas>
+  <div id="peer_id_label">id</div>
+  <input id="peer_id_input" type="text" placeholder="id"></div>
+  <input id="connect_btn" type="button" value="接続">
+  <input id="message_input" type="text" placeholder="メッセージ"></div>
+  <input id="send_msg_btn" type="button" value="送信">
+  <div id="log"></div>
+  <!-- <canvas id="game"></canvas> -->
 
   <canvas id="loadingText"></canvas>
 
