切断ボタン

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <div class="input_wrapper" id="peeid_input_wrapper">
     <input id="peer_id_input" type="text" placeholder="id">
     <input id="connect_btn" type="button" value="接続">
+    <input id="disconnect_btn" type="button" value="切断">
   </div>
   <div class="input_wrapper" id="room_input_wrapper">
     <input id="room_name_input" type="text" placeholder="ルーム名">
