iOSのレイアウト改善

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
       </div>
       <div class="setting_wrapper">
         <div class="range_wrapper">
-          <input class="left_btn" id="honsu_left_btn" type="button" value="◀">
+          <input class="left_btn" id="honsu_left_btn" type="button" value="ー">
           <p>ポッキーの本数</p>
-          <input class="right_btn" id="honsu_right_btn" type="button" value="▶">
+          <input class="right_btn" id="honsu_right_btn" type="button" value="＋">
           <p class="range_label" id="honsu_range_label">20</p>
           <input id="honsu_range" type="range" min="20" max="100" value="20" />
         </div>
         <div class="range_wrapper">
-          <input class="left_btn" id="hazure_left_btn" type="button" value="◀">
+          <input class="left_btn" id="hazure_left_btn" type="button" value="ー">
           <p>ハズレの本数</p>
-          <input class="right_btn" id="hazure_right_btn" type="button" value="▶">
+          <input class="right_btn" id="hazure_right_btn" type="button" value="＋">
           <p class="range_label" id="hazure_range_label">2</p>
           <input id="hazure_range" type="range" min="2" max="92" value="2" />
         </div>
