--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </div>
         <div class="radio_wrapper">
           <p>順番</p>
-          <input type="radio" name="turn" value="random" checked>ランダム
-          <input type="radio" name="turn" value="kotei">固定
+          <input type="radio" name="junban" value="random" checked>ランダム
+          <input type="radio" name="junban" value="kotei">固定
         </div>
         <input id="ready_btn" type="button" value="Ready">
       </div>
