切断で消去

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ロシアンポッキー</title>
   <!-- <link rel="shortcut icon" href="resource/icons/favicon.ico"> -->
   <!-- <link rel="manifest" href="manifest.json"> -->
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
@@ -56,14 +56,14 @@
       </div>
       <div class="setting_wrapper">
         <div class="range_wrapper">
-          <input class="left_btn" id="honsu_left_btn" type="button" value="ー">
+          <input class="left_btn" id="honsu_left_btn" type="button" value="－">
           <p>ポッキーの本数</p>
           <input class="right_btn" id="honsu_right_btn" type="button" value="＋">
           <p class="range_label" id="honsu_range_label">20</p>
           <input id="honsu_range" type="range" min="20" max="100" value="20" />
         </div>
         <div class="range_wrapper">
-          <input class="left_btn" id="hazure_left_btn" type="button" value="ー">
+          <input class="left_btn" id="hazure_left_btn" type="button" value="－">
           <p>ハズレの本数</p>
           <input class="right_btn" id="hazure_right_btn" type="button" value="＋">
           <p class="range_label" id="hazure_range_label">2</p>
